#                                               -*- Autoconf -*-
# Process this file with autoconf to produce a configure script.

AC_PREREQ([2.63])
AC_INIT([ain_prototype], [0.1], [dark@eggncider.com])

# Checks for programs.
AC_PROG_CXX
AC_PROG_CC
#AC_PROG_AWK
#AC_PROG_RANLIB
#AC_PROG_INSTALL
AC_PATH_PROG(AR,ar,ar)
#AC_PATH_PROG(LIBTOOL,libtool,libtool)
#AC_PATH_PROG(PERL,perl,perl)

# Checks for libraries.

# Checks for header files.

# Checks for typedefs, structures, and compiler characteristics.

# Checks for library functions.

AC_CONFIG_FILES([./ain.mk])

AC_OUTPUT
